Fix issue with pairing and only poll for linked channels
Signed-off-by: Michael Lobstein <michael.lobstein@gmail.com>